--- a/FirstCommit.html
+++ b/FirstCommit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paws & Claws Rescue Helper</title>
+    <title>ResQPet</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -37,8 +37,8 @@
     <div class="container mx-auto p-4 md:p-8 max-w-4xl">
         <!-- Header -->
         <header class="text-center mb-8">
-            <h1 class="text-4xl md:text-5xl font-bold text-teal-600">Paws & Claws Rescue Helper</h1>
-            <p id="header-subtitle" class="text-gray-600 mt-2 text-lg">Your all-in-one tool for helping animals in need.</p>
+            <h1 class="text-4xl md:text-5xl font-bold text-teal-600">ResQPet</h1>
+            <p id="header-subtitle" class="text-gray-600 mt-2 text-lg">Rescue made Simple, Care made Sure.</p>
         </header>
 
         <!-- Dashboard Section -->
@@ -47,16 +47,16 @@
                 <h2 class="text-3xl font-bold text-gray-800 mb-2">Welcome!</h2>
                 <p class="text-gray-600 mb-6">How can we help you today?</p>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                    <button data-target="vet-finder-container" class="dashboard-option p-6 bg-teal-50 hover:bg-teal-100 rounded-lg shadow-sm transition-all transform hover:scale-105">
-                        <h3 class="text-xl font-bold text-teal-700">Vet Finder</h3>
+                    <button data-target="resqvet-container" class="dashboard-option p-6 bg-teal-50 hover:bg-teal-100 rounded-lg shadow-sm transition-all transform hover:scale-105">
+                        <h3 class="text-xl font-bold text-teal-700">ResQVet</h3>
                         <p class="text-teal-600 mt-1">Find nearby vets for an injured animal.</p>
                     </button>
                      <button data-target="shelter-finder-container" class="dashboard-option p-6 bg-blue-50 hover:bg-blue-100 rounded-lg shadow-sm transition-all transform hover:scale-105">
-                        <h3 class="text-xl font-bold text-blue-700">Shelter Home Finder</h3>
+                        <h3 class="text-xl font-bold text-blue-700">ResQNest</h3>
                         <p class="text-blue-600 mt-1">Locate a safe place for a stray.</p>
                     </button>
                      <button data-target="self-help-container" class="dashboard-option p-6 bg-indigo-50 hover:bg-indigo-100 rounded-lg shadow-sm transition-all transform hover:scale-105">
-                        <h3 class="text-xl font-bold text-indigo-700">AI First-Aid Guide</h3>
+                        <h3 class="text-xl font-bold text-indigo-700">ResQGuide</h3>
                         <p class="text-indigo-600 mt-1">Get instant first-aid advice.</p>
                     </button>
                 </div>
@@ -64,7 +64,7 @@
         </main>
 
         <!-- Vet Finder Section -->
-        <main id="vet-finder-container" class="app-section bg-white p-6 md:p-8 rounded-2xl shadow-lg">
+        <main id="resqvet-container" class="app-section bg-white p-6 md:p-8 rounded-2xl shadow-lg">
             <button class="back-to-dashboard-btn mb-6 text-teal-600 hover:text-teal-800 font-semibold">&larr; Back to Dashboard</button>
             <div class="mb-6">
                 <label for="animal-type" class="block text-lg font-medium text-gray-700 mb-2">1. What kind of animal did you find?</label>
@@ -91,7 +91,7 @@
         <!-- Shelter Finder Section -->
         <main id="shelter-finder-container" class="app-section bg-white p-6 md:p-8 rounded-2xl shadow-lg">
             <button class="back-to-dashboard-btn mb-6 text-blue-600 hover:text-blue-800 font-semibold">&larr; Back to Dashboard</button>
-            <h2 class="text-3xl font-bold text-blue-700 text-center">Shelter Home Finder</h2>
+            <h2 class="text-3xl font-bold text-blue-700 text-center">ResQNest</h2>
             <p class="text-center mt-4 text-gray-600 mb-6">The shelter locator feature is coming soon. In the meantime, you can generate hand-off notes for the shelter.</p>
             <div class="border-t pt-6">
                 <label for="shelter-animal-condition" class="block text-lg font-medium text-gray-700 mb-2">Describe the animal's condition:</label>
@@ -107,7 +107,7 @@
         <!-- AI First Aid Section -->
         <main id="self-help-container" class="app-section bg-white p-6 md:p-8 rounded-2xl shadow-lg">
             <button class="back-to-dashboard-btn mb-6 text-indigo-600 hover:text-indigo-800 font-semibold">&larr; Back to Dashboard</button>
-            <h2 class="text-3xl font-bold text-indigo-700 text-center">AI First-Aid Guide</h2>
+            <h2 class="text-3xl font-bold text-indigo-700 text-center">ResQGuide</h2>
             <div class="mt-6">
                  <label for="aid-animal-type" class="block text-lg font-medium text-gray-700 mb-2">1. Select Animal Type</label>
                  <select id="aid-animal-type" class="w-full p-3 bg-gray-50 border border-gray-300 rounded-lg shadow-sm focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition">
@@ -116,7 +116,8 @@
                     <option value="bird">Bird</option>
                     <option value="reptile">Reptile / Snake</option>
                     <option value="small_mammal">Small Mammal (Rabbit, Guinea Pig)</option>
-                 </select>
+                    <option value="livestock">Livestock (Cow, Goat)</option>
+                </select>
             </div>
             <div class="mt-4">
                 <label for="aid-animal-condition" class="block text-lg font-medium text-gray-700 mb-2">2. Describe the Situation</label>
@@ -131,7 +132,7 @@
 
         <!-- Footer -->
         <footer class="text-center mt-8 text-gray-500 text-sm">
-            <p>&copy; 2025 Paws & Claws Rescue Helper. Helping you help them.</p>
+            <p>&copy; 2025 ResQPet. Helping you help them.</p>
         </footer>
     </div>
 
@@ -179,10 +180,10 @@
 
         // --- GEMINI API INTEGRATION ---
         const API_KEY = ""; // Your API key is injected in the environment
-        const API_URL = https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${API_KEY};
+        const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${API_KEY}`;
         
         async function callGeminiAPI(prompt, statusEl, resultEl) {
-            statusEl.innerHTML = <div class="flex items-center justify-center p-4 bg-blue-50 border border-blue-200 rounded-lg"><div class="loader ease-linear rounded-full border-4 border-t-4 border-gray-200 h-6 w-6 mr-3"></div><p class="text-blue-700 font-medium">Generating advice... Please wait.</p></div>;
+            statusEl.innerHTML = `<div class="flex items-center justify-center p-4 bg-blue-50 border border-blue-200 rounded-lg"><div class="loader ease-linear rounded-full border-4 border-t-4 border-gray-200 h-6 w-6 mr-3"></div><p class="text-blue-700 font-medium">Generating advice... Please wait.</p></div>`;
             resultEl.innerHTML = '';
 
             const payload = { contents: [{ parts: [{ text: prompt }] }] };
@@ -195,7 +196,7 @@
                 });
 
                 if (!response.ok) {
-                    throw new Error(API Error: ${response.status} ${response.statusText});
+                    throw new Error(`API Error: ${response.status} ${response.statusText}`);
                 }
 
                 const data = await response.json();
@@ -208,7 +209,7 @@
                 }
 
             } catch (error) {
-                 resultEl.innerHTML = <div class="p-4 bg-red-50 border border-red-200 rounded-lg"><p class="text-red-700 font-medium">Error: Could not get advice. ${error.message}</p></div>;
+                 resultEl.innerHTML = `<div class="p-4 bg-red-50 border border-red-200 rounded-lg"><p class="text-red-700 font-medium">Error: Could not get advice. ${error.message}</p></div>`;
             } finally {
                 statusEl.innerHTML = '';
             }
@@ -222,7 +223,7 @@
                 return;
             }
             const prompt = `You are an emergency veterinary assistant. Provide simple, safe, step-by-step first-aid advice for a person who found an injured ${animal}. The situation is: "${condition}".
-            IMPORTANT: Start with a clear, bolded warning: "*DISCLAIMER: This is AI-generated advice and not a substitute for professional veterinary care. Your first priority should be to contact a veterinarian.*"
+            IMPORTANT: Start with a clear, bolded warning: "**DISCLAIMER: This is AI-generated advice and not a substitute for professional veterinary care. Your first priority should be to contact a veterinarian.**"
             Use simple language suitable for someone who is panicking. Use numbered steps or clear bullet points. Focus on safety for both the human and the animal.`;
             callGeminiAPI(prompt, aidStatus, aidResult);
         });
@@ -235,11 +236,11 @@
             }
             const prompt = `You are an experienced animal rescuer. Write a brief, clear, and concise hand-off note for an animal shelter. The note should be based on the following observation from the person who found the animal: "${condition}".
             Format the output with the following headings:
-            - *Animal Description:*
-            - *Observed Condition/Injuries:*
-            - *Temperament:*
-            - *Location Found:*
-            - *Immediate Concerns for Shelter Staff:*
+            - **Animal Description:**
+            - **Observed Condition/Injuries:**
+            - **Temperament:**
+            - **Location Found:**
+            - **Immediate Concerns for Shelter Staff:**
             Fill in the details based on the user's description. If the user's description doesn't mention something (like temperament or location), write "Not specified" or make a reasonable inference. Keep it professional and to the point.`;
             callGeminiAPI(prompt, shelterNotesStatus, shelterNotesResult);
         });
@@ -263,7 +264,7 @@
             setTimeout(() => {
                 const relevantVets = vets.filter(vet => vet.specialties.includes(animalType));
                 if (relevantVets.length === 0) {
-                    showError(No vets found specializing in the selected animal type.);
+                    showError(`No vets found specializing in the selected animal type.`);
                     return;
                 }
                 const vetsWithDistance = relevantVets.map(vet => ({
@@ -284,7 +285,7 @@
         function displayResults(sortedVets) {
             clearUI();
             if (sortedVets.length === 0) {
-                showError(No vets found specializing in the selected animal type.);
+                showError(`No vets found specializing in the selected animal type.`);
                 return;
             }
             sortedVets.forEach(vet => {
@@ -303,8 +304,8 @@
                     </div>`;
             });
         }
-        function showLoading(message) { statusContainer.innerHTML = <div class="flex items-center justify-center p-4 bg-blue-50 border border-blue-200 rounded-lg"><div class="loader ease-linear rounded-full border-4 border-t-4 border-gray-200 h-6 w-6 mr-3"></div><p class="text-blue-700 font-medium">${message}</p></div>; }
-        function showError(message) { statusContainer.innerHTML = <div class="p-4 bg-red-50 border border-red-200 rounded-lg"><p class="text-red-700 font-medium">${message}</p></div>; }
+        function showLoading(message) { statusContainer.innerHTML = `<div class="flex items-center justify-center p-4 bg-blue-50 border border-blue-200 rounded-lg"><div class="loader ease-linear rounded-full border-4 border-t-4 border-gray-200 h-6 w-6 mr-3"></div><p class="text-blue-700 font-medium">${message}</p></div>`; }
+        function showError(message) { statusContainer.innerHTML = `<div class="p-4 bg-red-50 border border-red-200 rounded-lg"><p class="text-red-700 font-medium">${message}</p></div>`; }
         function clearUI() { resultsContainer.innerHTML = ''; statusContainer.innerHTML = ''; }
     </script>
 </body>
